Bug #47391 no stack trace printed to error log on solaris after a crash
Submitted: 17 Sep 2009 6:15 Modified: 12 Mar 2010 17:30
Reporter: Shane Bester (Platinum Quality Contributor) Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Errors Severity:S2 (Serious)
Version:5.1.38 OS:Solaris
Assigned to: Staale Smedseng CPU Architecture:Any

[17 Sep 2009 6:15] Shane Bester
Description:
There is no stack trace printed to error log on solaris after a crash.
In this regard our own operating system is not supported properly, and crash analysis/and bug identification without a corefile is impossible.

How to repeat:
crash mysqld on solaris without corefile enabled and try determine why it crashed.

Suggested fix:
we need stack traces in the mysqld error log.
we also need correct value for thd->query to be printed.
[17 Sep 2009 6:15] Shane Bester
Embarrassing, and a huge problem for troubleshooting customers crashes that
happen very intermittently.  Do you remember linux x64 problems with no stacks?
[17 Sep 2009 6:21] Shane Bester
This should only be considered a feature request if Sun/MySQL is NOT committed to identifying and fixing serious product defects on our own 'supported' platform with alacritous fervency.  All customers that had crashes on solaris that were NOT innodb assertions, are affected. There are quite a few of them, I'm not going to list them all.
[16 Oct 2009 11:20] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/87106

2817 Staale Smedseng	2009-10-16
      Bug #47391 no stack trace printed to error log on 
      solaris after a crash
      
      This patch adds a Solaris-specific version of
      print_stacktrace() which uses printstack(2). The symbol
      names are mangled, so use of c++filt may be required as
      described in the MySQL documentation.
[6 Dec 2009 17:11] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/92992

2860 Staale Smedseng	2009-12-06
      Bug #47391 no stack trace printed to error log on 
      solaris after a crash
            
      This patch adds a Solaris-specific version of
      print_stacktrace() which uses printstack(2), available on all
      Solaris versions since Solaris 9. (While Solaris 11 adds
      support for the glibc functions backtrace_*() as of
      PSARC/2007/162, printstack() is used for consistency over all
      Solaris versions.)
      
      The symbol names are mangled, so use of c++filt may be
      required as described in the MySQL documentation.
     @ sql/stacktrace.c
        Added Solaris-specific print_stacktrace().
[19 Dec 2009 8:28] Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20091219082307-f3i4fn0tm8trb3c0) (version source revid:alik@sun.com-20091216180721-eoa754i79j4ssd3m) (merge vers: 6.0.14-alpha) (pib:15)
[19 Dec 2009 8:31] Bugs System
Pushed into 5.5.1-m2 (revid:alik@sun.com-20091219082021-f34nq4jytwamozz0) (version source revid:alexey.kopytov@sun.com-20091211164058-ycpe0f20d1c4h1gl) (merge vers: 5.5.0-beta) (pib:15)
[19 Dec 2009 8:35] Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20091219082213-nhjjgmphote4ntxj) (version source revid:alik@sun.com-20091216180221-a5ps59gajad3pip9) (pib:15)
[7 Jan 2010 16:46] Paul DuBois
Noted in 5.5.1, 6.0.14 changelogs.

On Solaris, no stack trace was printed to the error log after a 
crash.  

Setting report to NDI pending push to Celosia.
[14 Jan 2010 8:26] Bugs System
Pushed into 5.0.90 (revid:joro@sun.com-20100114082402-05fod2h6z9x9wok8) (version source revid:aelkin@mysql.com-20091214144410-630vanwyllvvacad) (merge vers: 5.0.89) (pib:16)
[14 Jan 2010 18:21] Paul DuBois
Noted in 5.0.90 changelog.

Setting report to NDI pending push to 5.1.x, Celosia.
[15 Jan 2010 9:00] Bugs System
Pushed into 5.1.43 (revid:joro@sun.com-20100115085139-qkh0i0fpohd9u9p5) (version source revid:staale.smedseng@sun.com-20091206180111-k1wo9bg9tyb8qeft) (merge vers: 5.1.42) (pib:16)
[15 Jan 2010 19:08] Paul DuBois
Noted in 5.1.43 changelog.

Setting report to NDI pending push to Celosia.
[4 Feb 2010 10:19] Bugs System
Pushed into 5.1.44 (revid:joro@sun.com-20100204101444-2j32mhqroo0iiio6) (version source revid:aelkin@mysql.com-20100128095157-dkwe8691qj2tp9h7) (merge vers: 5.1.43) (pib:16)
[4 Feb 2010 15:18] Paul DuBois
Setting report to Need Merge pending push to Celosia.
[5 Feb 2010 11:48] Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100204063540-9czpdmpixi3iw2yb) (version source revid:alik@sun.com-20100130212638-ai8t5v3u6647p6d2) (pib:16)
[5 Feb 2010 11:55] Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100205113942-oqovjy0eoqbarn7i) (version source revid:alik@sun.com-20100204064210-ljwanqvrjs83s1gq) (merge vers: 6.0.14-alpha) (pib:16)
[5 Feb 2010 11:59] Bugs System
Pushed into 5.5.2-m2 (revid:alik@sun.com-20100203172258-1n5dsotny40yufxw) (version source revid:alik@sun.com-20100130191336-i53i9wx67n81ridm) (merge vers: 5.5.2-m2) (pib:16)
[5 Feb 2010 16:55] Paul DuBois
Setting report to Need Merge pending push to Celosia.
[12 Mar 2010 14:14] Bugs System
Pushed into 5.1.44-ndb-7.0.14 (revid:jonas@mysql.com-20100312135944-t0z8s1da2orvl66x) (version source revid:jonas@mysql.com-20100312115609-woou0te4a6s4ae9y) (merge vers: 5.1.44-ndb-7.0.14) (pib:16)
[12 Mar 2010 14:30] Bugs System
Pushed into 5.1.44-ndb-6.2.19 (revid:jonas@mysql.com-20100312134846-tuqhd9w3tv4xgl3d) (version source revid:jonas@mysql.com-20100312060623-mx6407w2vx76h3by) (merge vers: 5.1.44-ndb-6.2.19) (pib:16)
[12 Mar 2010 14:46] Bugs System
Pushed into 5.1.44-ndb-6.3.33 (revid:jonas@mysql.com-20100312135724-xcw8vw2lu3mijrhn) (version source revid:jonas@mysql.com-20100312103652-snkltsd197l7q2yg) (merge vers: 5.1.44-ndb-6.3.33) (pib:16)
[12 Mar 2010 17:30] Paul DuBois
Fixed in earlier 5.1.x, 5.5.x.